fixed layout bug where sections overlap

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@
   --primary-color-hover: #306f59;
 }
 
+/* GENERAL */
+
 * {
   margin: 0;
   padding: 0;
@@ -32,7 +34,7 @@ a {
   text-decoration: none;
 }
 
-/* HEADER */
+/* MENU */
 
 header {
   position: fixed;
@@ -40,7 +42,6 @@ header {
   z-index: 3;
   top: 0;
   font-family: 'Bitter';
-  margin-top: 1rem;
 }
 
 .logo p {
@@ -442,9 +443,112 @@ footer li {
     float: right;
     max-height: none;
   }
+
   .header .menu-icon {
     display: none;
   }
 
+  .content {
+    margin: 7rem auto 0 auto;
+  }
 
+  .main-header {
+    height: 100vh;
+    margin-bottom: 3rem;
+  }
+
+  section {
+    height: 100vh;
+  }
+}
+
+@media (max-width: 986px) {
+  .main-header {
+    margin-bottom: 13rem;
+  }
+
+  .content {
+    margin-top: 9rem;
+  }
+
+  section {
+    margin-top: 5rem;
+  }
+
+  .projects {
+    margin-top: 12rem;
+  }
+
+  h2 {
+    margin-bottom: 2rem;
+  }
+  
+}
+
+
+@media (min-width: 1240px) {
+  section {
+    height: 90vh;
+    justify-content: flex-start;
+    margin-bottom: 3rem;
+  }
+}
+
+@media only screen and (max-width: 560px){
+
+  .main-header h1{
+    font-size: 1.9rem;
+  }
+
+  .main-header button {
+    margin-bottom: 1rem;
+  }
+
+  .main-header {
+    margin-bottom: 0;
+  }
+  
+  section {
+     margin-top: 10rem;
+  }
+
+  .contact {
+    margin-top: 7rem;
+  }
+}
+
+@media only screen and (max-width: 374px){
+
+  .main-header h1{
+    font-size: 1.2rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  .projects {
+    margin-top: 24rem;
+  }
+
+  .contact {
+    margin-top: 15rem;
+  }
+
+  .contact h2 {
+    margin-bottom: 3rem;
+  }
+}
+
+@media only screen and (min-width: 750px) and (max-width: 1025px){ 
+  .main-header {
+    margin-bottom: 0;
+  }
+  section {
+    height: 50vh;
+  }
+
+  .contact {
+    margin-top: 0;
+  }
 }
